assets/css/style.css
/* ... */
#index.content {
	margin-top: 225px;
}

@media only screen and (max-width: 1600px) {
	#index.content {
		margin-top: 225px;
	}
}

@media only screen and (max-width: 1023px) {
	#index.content {
		margin-top: 100px;
	}
}

/* Portfolio Header */
#portfolio-header {
	display: flex;
	gap: 20px;
	align-items: center;
}

#portfolio-header-image-container {
	display: flex;
	flex-direction: column;
	gap: 10px;
	flex-basis: 50%;
}

.portfolio-header-image {
	width: 100%;
	height: auto;
}

#portfolio-header-text-container {
	display: flex;
	flex-direction: column;
	gap: 34px;
	flex-basis: 50%;
}

@media only screen and (max-width: 800px) {
	#portfolio-header {
		flex-direction: column;
	}
}

/* About Section */
#about-section {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.about-section-content {
	display: flex;
	flex-direction: column;
	gap: 34px;
}

/* Project Section */
.projects-section {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.grid-container {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-column-gap: 34px;
	grid-row-gap: 34px;
}

.grid-container.equal {
	grid-auto-rows: 1fr
}

@media only screen and (max-width: 767px) {
	.grid-container {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media only screen and (max-width: 500px) {
	.grid-container {
		grid-template-columns: repeat(1, 1fr);
	}
}

/* Project Cards */
.project-card {
	display: flex;
	flex-direction: column;
	gap: 34px;
}

.project-card>a {
	margin-top: auto;
}

.project-card-text-container {
	flex-direction: column;
	display: flex;
	gap: 16px
}

.project-card-text {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-line-clamp: 4;
	-webkit-box-orient: vertical;
}

.project-title {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	-webkit-line-clamp: 1;
	-webkit-box-orient: vertical;
}

.project-image {
	height: 100%;
	border-radius: 3em;
	border: 1px solid var(--img-border);
}

.card-image {
	width: 100%;
	height: 200px;
	object-fit: contain;
	display: inline-flex;
	justify-content: center;
}

/* Blog cards */
a.blog-card {
	display: flex;
	flex-direction: column;
	overflow: hidden;
	padding: 25px 20px;
	border-radius: 2em;
	border: 1px solid var(--img-border);
	text-decoration: none;
	color: #fafafa;
	/* harcoded cause it's the same for light/dark */
}

a.blog-card.v1 {
	background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
}

a.blog-card.v2 {
	background-image: linear-gradient(43deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
}

a.blog-card.v3 {
	background-image: linear-gradient(43deg, #8ba6ff 0%, #2BD2FF 52%, #2bffd1 90%);
}

a.blog-card.v4 {
	background-image: linear-gradient(43deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
}

a.blog-card.v5 {
	background-image: linear-gradient(43deg, #FAD961 0%, #ffb388 50%, #fff5d3 100%);
}

a.blog-card p {
	margin: 0;
	font-size: 20px;
	font-weight: bold;
}

a.blog-card span {
	margin-top: 18px;
	font-size: 17px;
}

@media only screen and (max-width: 1023px) {
	a.blog-card {
		text-align: center;
		justify-content: center;
	}

	a.blog-card p {
		font-size: 18px;
	}
}

/****************************** Privacy Page Layout *****************************/
#privacy .heading {
	display: flex;
	align-items: center;
	padding: 0 25px;
}

#privacy .heading>img {
	border-radius: 25%;
	border: 1px solid var(--img-border);
	height: 100px;
}

#privacy .heading>span {
	padding-left: 20px;
	font-size: 30px;
	font-weight: bold;
}

#privacy .paper {
	font-family: Courier, monospace;
	padding: 20px 25px 0;
	border-radius: 1em;
}

#privacy .paper>.title {
	margin: 3px 0 22px 10px;
	font-size: 30px;
	font-weight: bold;
}

#privacy .paper>.title:not(:first-child) {
	margin-top: 24px;
}

#privacy .paper>.text {
	font-size: 18px;
	margin: 0 10px;
	line-height: 27px;
}

#privacy .paper>br {
	display: block;
	height: 27px;
	content: '';
}

/******************************** Post Page Layout ******************************/
#post ul,
#post ol {
	margin-top: 0;
	padding-left: 0;
}

#post ul li,
#post ol li {
	list-style-position: inside;
	margin-bottom: 4px;
}

#post ul ::marker,
#post ol ::marker {
	font-weight: bold;
}

#post .article {
	font-size: 17px;
	line-height: 1.3;
}

#post .post-img {
	position: relative;
}

#post .post-img img {
	width: 450px;
	border-radius: 2em;
}

#post .post-img>p {
	position: absolute;
	bottom: 0;
	right: 0;
	margin: 9px 25px;
	font-size: 11px;
	mix-blend-mode: difference;
	user-select: none;
	color: #fff;
}

#post .post-img>p a {
	color: #fff;
}

@media only screen and (min-width: 1024px) {
	#post .post-img {
		float: left;
		margin-right: 20px;
		margin-bottom: 6px;
	}
}

@media only screen and (max-width: 1023px) {
	#post .article {
		display: flex;
		flex-direction: column;
	}

	#post .post-img {
		display: flex;
		align-self: center;
		margin-bottom: 21px;
	}

	#post .post-img img {
		max-width: 90vw;
	}
}

/***************************** Not Found Page Layout ****************************/
#notfound.content {
	position: absolute;
	width: 100%;
	min-height: 100%;
	margin: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	user-select: none;
	padding-top: calc(var(--navbar-h-noshrink) + 20px);
	padding-bottom: 20px;
}

#notfound.content>i {
	font-size: 80px;
	margin-bottom: 20px;
}

#notfound.content>span {
	font-weight: bold;
	padding: 0 15px;
	font-size: 20px;
}

@media only screen and (max-width: 1023px) {
	#notfound.content {
		padding-bottom: calc(var(--nav-buttons-h) + 20px);
	}
}

@media only screen and (max-width: 600px) {
	#notfound.content>i {
		font-size: 70px;
	}

	#notfound.content>span {
		font-size: 17px;
	}
}
/* ... */

